  won't keep trying to use it, forever. Instead, it crashes and
  terminates the backup.

Improvements to the manual:

* The manual now has an appendix listing all Obnam errors, with codes
  and explanations. This will need to be updated manually from time to
  time.

* The manual now has sections on turning on full debug logging and
  reporting problems.


Version 1.18.2, released 2015-11-15
---------------------------------

Bug fixes:

* The `--exclude-caches` option now works correctly again. Prevoiusly
  it would exclude a cache directory, but would scan through and back
  up the contents of the cache directory. As a result, the backup
  generation would be much bigger, but have hidden files, not visible
  in the output of `obnam ls`. To fix that, remove any generations
  made with Obnam 1.18 or 1.18.1.

  This will affect other exclusions as well.

Version 1.18.1, released 2015-11-06
---------------------------------

Bug fixes:

* The `--quiet` option now disables the statistics reports at the end
  of a backup run.

Version 1.18, released 2015-11-04
---------------------------------

Bug fixes:

* William Boughton fixed parsing for sftp URLs with IPv6 addresses.
  Previously, `sftp://[::1]` would be interpreted by Obnam as an
  address `[` followed by the port `:1]`, but now it is correctly
  interpreted as the adddress `::1` and no explicit port.

* Ian Campbell fixed a bug in the kdirstat plugin, improving the
  handling of unknown file types.

* Lars Wirzenius changed the `scan_tree` code to not be recursive, to
  avoid problems with directory trees that are deeper than Python's
  call stack limit allows.

Minor changes:

* Lars Wirzenius added support for a multiline progress message during
  backup. Version 0.24 or newer of `ttystatus` is needed for this, but
  Obnam will work with an older version by displaying the same
  single-line progress message as before.

* Ben Boeckel added the `--gnupghome` setting so that Obnam can be